--- a/templates/devArea.html
+++ b/templates/devArea.html
@@ -7,5 +7,6 @@
 <button type="button"><a href="http://127.0.0.1:5000/createtable">Create table</a></button>
 <button type="button"><a href="http://127.0.0.1:5000/addRedditInfo">Add reddit info to table</a></button>
 <button type="button"><a href="http://127.0.0.1:5000/viewresults">View Results</a></button>
-<button type="button"><a href="{{url_for('deleteposts')}}">Change to delete</a></button>
+<button type="button"><a href="{{url_for('deleteposts')}}">delete from db</a></button>
+<button type="button"><a href="{{url_for('unfavpost')}}">Unsave post from Reddit Account</a></button>
 </html>
