--- a/static/CSS/style.css
+++ b/static/CSS/style.css
@@ -360,7 +360,7 @@ body{
   padding-bottom: .1px;
 }
 
-.card {
+.card1 {
   /* Add shadows to create the "card" effect */
   box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
   transition: 0.3s;
@@ -375,10 +375,19 @@ body{
 }
 
 /* Add some padding inside the card container */
-.container {
+.container1 {
   padding: 2px 16px;
 }
 
 h3 {
   text-align: center;
+}
+
+a:link {
+  color: black;
+  text-decoration: none;
+}
+
+a:visited {
+  color: gray;
 }
