updated to a better looking table

--- a/templates/updateTableUnsorted.html
+++ b/templates/updateTableUnsorted.html
@@ -7,39 +7,44 @@
 
 {% block content %}
 <br>
-<h1>Unsorted</h1>
-<table class="blueTable">
-	<tr>
-		<th>Number</th>
-		<th>Post</th>
-		<th>Link</th>
-		<th>Category</th>
-		<th>Change?</th>
-	</tr>
-	{% for post in results2 %}
-	<tr>
-		<td>{{loop.index}}</td>
-		<td>{{post['title']}}</td>
-		<td><a href="{{post['link']}}" target='_blank'>Link</a></td>
-		<td>{{post['category']}}</td>
-		<td>
-			<form action="{{url_for('updateTableUnsorted')}}" method="POST">
-				<select name="{{loop.index}}cat2">
-    				{% for categories in categories %}
-    					<option value= "{{categories}}" {% if post['category'] == categories %} SELECTED{% endif %}>{{ categories }}
-    					</option>
-    				{% endfor %}
-				</select>
-		</td>
-	</tr>
-	{% endfor %}
+<h1>All Unsorted Posts</h1>
+<div class="limiter">
+		<div class="container-table100">
+			<div class="wrap-table100">
+					<div class="table">
 
-</table>
+						<div class="row header">
+							<div id="1" class="cell">Number</div>
+							<div class="cell">Post</div>
+							<div class="cell">Link</div>
+							<div class="cell">Category</div>
+							<div class="cell">Change?</div>
+						</div>
+						{% for post in results2 %}
+						<div class="row">
+							<div class="cell" data-title="Number">{{loop.index}}</div>
+							<div class="cell" data-title="Post">{{post['title']}}</div>
+							<div class="cell" data-title="Link"><a href="{{post['link']}}" target='_blank'>Link</a></div>
+							<div class="cell" data-title="Category">{{post['category']}}</div>
+							<div class="cell" data-title="Change?">
+								<form action="{{url_for('updateTable')}}" method="POST">
+									<select name="{{loop.index}}cat">
+    									{% for categories in categories %}
+    										<option value= "{{categories}}" {% if post['category'] == categories %} SELECTED{% endif %}>{{ categories }}</option>
+    									{% endfor %}
+									</select>
+							</div>
+						</div>
+
+						{% endfor %}
+						</div>
+</div>
 <br/>
 <input type ="submit" name="name" value="View Tables">
 </form>	
 </br>
 </br>
 {% endblock %}
+
 </body>
 </html>
