--- a/templates/updateTable.html
+++ b/templates/updateTable.html
@@ -7,34 +7,40 @@
 
 {% block content %}
 </br>
-<h1>All Posts (unsorted)</h1>
-<table class="blueTable">
-	<tr>
-		<th>Number</th>
-		<th>Post</th>
-		<th>Link</th>
-		<th>Category</th>
-		<th>Change?</th>
-	</tr>
-	{% for post in results %}
-	<tr>
-		<td>{{loop.index}}</td>
-		<td>{{post['title']}}</td>
-		<td><a href="{{post['link']}}" target='_blank'>Link</a></td>
-		<td>{{post['category']}}</td>
-		<td>
-			<form action="{{url_for('updateTable')}}" method="POST">
-				<select name="{{loop.index}}cat">
-    				{% for categories in categories %}
-    					<option value= "{{categories}}" {% if post['category'] == categories %} SELECTED{% endif %}>{{ categories }}
-    					</option>
-    				{% endfor %}
-				</select>			
-		</td>
-	</tr>
-	{% endfor %}
-</table>
+<h1>All Posts</h1>
 
+<div class="limiter">
+		<div class="container-table100">
+			<div class="wrap-table100">
+					<div class="table">
+
+						<div class="row header">
+							<div id="1" class="cell">Number</div>
+							<div class="cell">Post</div>
+							<div class="cell">Link</div>
+							<div class="cell">Category</div>
+							<div class="cell">Change?</div>
+						</div>
+						{% for post in results %}
+						<div class="row">
+							<div class="cell" data-title="Number">{{loop.index}}</div>
+							<div class="cell" data-title="Post">{{post['title']}}</div>
+							<div class="cell" data-title="Link"><a href="{{post['link']}}" target='_blank'>Link</a></div>
+							<div class="cell" data-title="Category">{{post['category']}}</div>
+							<div class="cell" data-title="Change?">
+								<form action="{{url_for('updateTable')}}" method="POST">
+									<select name="{{loop.index}}cat">
+    									{% for categories in categories %}
+    										<option value= "{{categories}}" {% if post['category'] == categories %} SELECTED{% endif %}>{{ categories }}</option>
+    									{% endfor %}
+									</select>
+							</div>
+						</div>
+
+
+						{% endfor %}
+						</div>
+</div>
 <br/>
 <input type ="submit" name="name" value="View Tables">
 </form>	
@@ -43,10 +49,5 @@
 {% endblock %}
 </body>
 
-<!--
-<div id="footer">
-<p>by Matt</p>
-</div>
--->
 
 </html>
