updated all pages with better looking table

--- a/templates/navtest.html
+++ b/templates/navtest.html
@@ -13,6 +13,8 @@
          <li class='has-sub'><a href='{{url_for("sortbygaming")}}'><span>Gaming</span></a></li>
          <li class='has-sub'><a href='{{url_for("sortbyfunny")}}'><span>Funny</span></a></li>
          <li class='has-sub'><a href='{{url_for("sortbyprogramming")}}'><span>Programming</span></a></li>
+         <li class='has-sub'><a href='{{url_for("sortbysecurity")}}'><span>Security</span></a></li>
+         <li class='has-sub'><a href='{{url_for("sortbyraspberrypi")}}'><span>Raspberry Pi</span></a></li>        
          <li class='has-sub'><a href='{{url_for("sortbyconsolehacking")}}'><span>Console Hacking</span></a></li>
       </ul>
    </li>
