--- a/templates/index.html
+++ b/templates/index.html
@@ -1,9 +1,5 @@
 {% include "bootstrap/base.html" %}
-<html>
-<head>
-
-</head>
-{% extends "navtest.html" %}
+{% include "header.html" %}
 </br>
 </br>
 <body>
@@ -52,7 +48,7 @@
 
 
 
-{% endblock %}
+{% include "footer.html" %}
 
 
 </body>
