--- a/templates/footer.html
+++ b/templates/footer.html
@@ -1,18 +1,9 @@
-
-<html>
-<head>
-<link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='CSS/style.css') }}">
-
-</head>
-</body>
-{% block content %}
-
-{% endblock %}
-
-</body>
-
 <div id="footer">
 <p>by Matt</p>
 </div>
+</div>
+</body>
+<!--
 
+-->
 </html>
