--- a/templates/viewresults.html
+++ b/templates/viewresults.html
@@ -23,15 +23,20 @@
 							<div class="cell">Link</div>
 							<div class="cell">Category</div>
 						</div>
-						{% for post,y in zip(results, test) %}
+							
+						{% for post,x in zip(masterlist, test) %}
+						{% set count = loop.index %}
 						<div class="row">
-							<div class="cell" data-title="Number">{{loop.index + (page - 1) * per_page}}</div>
-							<div class="cell" data-title="Post">{{post['title']}}</div>
-							<div class="cell" data-title="Link"><a href="{{post['link']}}" target='_blank'>Link</a></div>
-							<div class="cell" data-title="Category">{{post['category']}}</div>
-							<input type="hidden" value="{{y}}">
+							<div class="cell" data-title="Number">{{count + (page - 1) * per_page}}</div>
+							<div class="cell" data-title="Post">{{x}}<input type="hidden" value={{x}}></div>
+							<div class="cell" data-title="Link"><a href="{{post}}" target='_blank'>Link</a></div>
+							<div class="cell" data-title="Category">{{post}}</div>
+							
 						</div>
+						
 						{% endfor %}
+						<!--<div class="row">
+							<div class="cell">{{"".join(masterlist[0][0:])}}</div>-->
 				</div>
 				{{ pagination.links }}
 			
