--- a/templates/viewresults.html
+++ b/templates/viewresults.html
@@ -28,7 +28,7 @@
 						{% set count = loop.index %}
 						<div class="row">
 							<div class="cell" data-title="Number">{{count + (page - 1) * per_page}}</div>
-							<div class="cell" data-title="Post">{{x}}<input type="hidden" value={{x}}></div>
+							<div class="cell" data-title="Post">{{post[0]}}<input type="hidden" value={{x}}></div>
 							<div class="cell" data-title="Link"><a href="{{post}}" target='_blank'>Link</a></div>
 							<div class="cell" data-title="Category">{{post}}</div>
 							
