--- a/static/CSS/style.css
+++ b/static/CSS/style.css
@@ -436,8 +436,9 @@ a:visited {
 }
 
 .row {
-  display: table-row;
+  display: table;
   background: #fff;
+  margin-left: 0px;
 }
 
 .row.header {
@@ -584,4 +585,15 @@ a:visited {
     padding-left: 2px;
     padding: .1em .25em;
     font-size: 150%;
+}
+
+.pagination {
+  display: inline-flex;
+}
+
+.pagination a {
+  color: black;
+  float: left;
+  padding: 8px 16px;
+  text-decoration: none;
 }
