--- a/templates/navtest.html
+++ b/templates/navtest.html
@@ -24,7 +24,7 @@
          <li class='has-sub'><a href='{{url_for("updateTable")}}'><span>All Posts</span></a></li>
       </ul>
     </li>
-   <li><a href='{{url_for("viewresults")}}'><span>View All</span></a></li>
+   <li><a href='{{url_for("viewresults", page_num=1)}}'><span>View All</span></a></li>
    <li> <a href="{{url_for('devArea')}}"><span>Dev Area</span></a></li>
 </ul>
 </div>
