--- a/templates/header.html
+++ b/templates/header.html
@@ -9,8 +9,8 @@
    <li> <a href="http://127.0.0.1:5000/"><span>Home</span></a></li>
    <li class='active has-sub'><a href='#'><span>Sort Posts</span></a>
       <ul>
-         <li class='has-sub'><a href='{{url_for("sortbyfood")}}'><span>Food</span></a></li>
-         <li class='has-sub'><a href='{{url_for("sortbygaming")}}'><span>Gaming</span></a></li>
+         <li class='has-sub'><a href='{{url_for("sortbyfood", page_num=1)}}'><span>Food</span></a></li>
+         <li class='has-sub'><a href='{{url_for("sortbygaming", page_num=1)}}'><span>Gaming</span></a></li>
          <li class='has-sub'><a href='{{url_for("sortbyfunny")}}'><span>Funny</span></a></li>
          <li class='has-sub'><a href='{{url_for("sortbyprogramming")}}'><span>Programming</span></a></li>
          <li class='has-sub'><a href='{{url_for("sortbysecurity")}}'><span>Security</span></a></li>
@@ -29,5 +29,4 @@
 </ul>
 </div>
 <body>
-<div id="page-container">
-<div id="content-wrap">
+
