--- a/templates/viewresults.html
+++ b/templates/viewresults.html
@@ -17,10 +17,14 @@
 							<div class="cell">Link</div>
 							<div class="cell">Category</div>
 						</div>
-						{% for t,i in zip(t3.items, range(14, 0, -1)) %}
+						{% for t,i in zip(t3.items, range(15, 0, -1)) %}
 						<div class="row">
 							<div class="cell" data-title="Number">
-								{{(t3.page * 15)-i}}
+								{% if t3.page == 1 %}
+								{{(t3.page * 16)-i}}
+								{% else %}
+								{{(t3.page * 15)-(i-1)}}
+								{% endif %}
 							</div>
 							<div class="cell" data-title="Post">{{t.title}}</div>
 							<div class="cell" data-title="Link"><a href="{{t.link}}" target='_blank'>Link</a></div>
@@ -31,10 +35,8 @@
 			
 						<nav aria-label="Page navigation example">
 							<ul class="pagination">
-
 								{% for page in t3.iter_pages(right_edge=1, left_edge=5) %}
 									{% if page %}
-
 										<li class="page-item"><a class="page-link" href="{{ url_for('viewresults', page_num=page) }}">{{ page }}</a>
 									{% else %}
 										<li class="page-item"><a class="page-link" href="#">...</a>
