--- a/templates/updateTable.html
+++ b/templates/updateTable.html
@@ -4,13 +4,12 @@
 <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='CSS/style.css') }}">
 </head>
 <body>
-{% extends "navtest.html" %}
-
-{% block content %}
+{% include "topnav.html" %}
+<div class="limiter">
 </br>
 <h1>All Posts</h1>
 
-<div class="limiter">
+
 		<div class="container-table100">
 			<div class="wrap-table100">
 					<div class="table">
@@ -46,7 +45,7 @@
 </form>	
 </br>
 </br>
-{% endblock %}
+
 </body>
 
 
