--- a/templates/index.html
+++ b/templates/index.html
@@ -15,7 +15,7 @@
 {% for (x,y) in zip(name_list, value_list) %}
 <div class="card1">
   <a href="#{{str(x)}}" data-toggle="modal">
-  <h3>{{str(x)}}</h3>
+  <h3 style="text-align: center;">{{str(x)}}</h3>
   <div class="container1"> 
     <p style="text-align: center;">
     {{str(y)}}
