--- a/templates/sortby.html
+++ b/templates/sortby.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 	<title>Sort by</title>
-	<link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='CSS/style.css') }}">
+	<!-- <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='CSS/style.css') }}"> -->
 </head>
 {% include "topnav.html" %}
 <div class="limiter">
