--- a/templates/index.html
+++ b/templates/index.html
@@ -1,9 +1,9 @@
-{% include "bootstrap/base.html" %}
-{% include "topnav.html" %}
+{% extends "topnav.html"%}
+{% block content %}
 </br>
 </br>
 <body>
-{% block content %}
+
 
 <h1>Hello And Welcome to the Reddit Sorting App!</h1>
 
