--- a/static/CSS/style.css
+++ b/static/CSS/style.css
@@ -554,6 +554,8 @@ a:visited {
   cursor: pointer;
 }
 
+
+
 @media (max-width: 768px) {
   .row {
     border-bottom: 1px solid #f2f2f2;
@@ -604,6 +606,7 @@ a:visited {
 
 .pagination {
   display: inline-flex;
+  margin: 1px;
 }
 
 .pagination a {
