--- a/templates/index.html
+++ b/templates/index.html
@@ -13,7 +13,6 @@
 <h2 style="text-align: center;">Top 10 Favorite Subs</h2>
 
 
-
 {% for (x,y) in zip(name_list, value_list) %}
 <div class="card1">
   <a href="#{{str(x)}}" data-toggle="modal">
@@ -44,7 +43,7 @@
       {% endfor %}
         <h3 class="modal-title" id="exampleModalLabel" style="text-align: center; color: #b04c41">r/{{str(x)}} {{p}}</h3>
         <button type="button" class="close" aria-label="Close">
-          <span aria-hidden="true">&times;</span>
+          <!-- <span aria-hidden="true">&times;</span> -->
         </button>
       </div>
       <div class="modal-body">
