end of day, minor fixes

--- a/templates/index.html
+++ b/templates/index.html
@@ -50,7 +50,7 @@
         </button>
       </div>
       <div class="modal-body">
-        {{desc_list[loop.index0]}} {{x}} {{z}}
+        {{desc_list[loop.index0]}}
       </div>
       <div class="modal-footer">
         <button type="button" class="btn btn-primary" data-dismiss="modal">Close</button>
