--- a/templates/sortby.html
+++ b/templates/sortby.html
@@ -62,7 +62,10 @@
     									</button>
     								</div>
     							<div class="modal-body">
+    								<img src="{{t.image}}" style="max-width: 75%; align-content: center; display: block; margin-left: auto; margin-right: auto;">
+    								{% if t.thread_text != "" %}
     								<pre style="white-space: pre-wrap">{{t.thread_text}}</pre>
+    								{% endif %}
 								</div>
       							<div class="modal-footer">
         							<button type="button" class="btn btn-primary" data-dismiss="modal">Close</button>
