--- a/templates/updateTable.html
+++ b/templates/updateTable.html
@@ -1,6 +1,6 @@
+<!DOCTYPE html>
 <html>
 <head>
-{% include "bootstrap/base.html" %}
 <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='CSS/style.css') }}">
 </head>
 <body>
@@ -8,25 +8,26 @@
 <div class="limiter">
 </br>
 <h1>All Posts</h1>
-
-
-		<div class="container-table100">
+	<div class="container-table100">
 			<div class="wrap-table100">
+				<a href="{{url_for('sortby', page_num=t3.page, per_page_res=15, order_by=order_by, sort_cat=sort_cat )}}"><button type="button" class="btn btn-primary">15</button></a>
+				<a href="{{url_for('sortby', page_num=t3.page, per_page_res=30, order_by=order_by, sort_cat=sort_cat )}}"><button type="button" class="btn btn-primary">30</button></a>
 					<div class="table">
-
-						<div class="row header">
-							<div id="1" class="cell">Number</div>
+						<div class="row header" style="content: none">
+							<div class="cell">Number</div>
 							<div class="cell">Post</div>
 							<div class="cell">Link</div>
 							<div class="cell">Category</div>
 							<div class="cell">Change?</div>
 						</div>
-						{% for post in results %}
+						{% for t, post in zip(t3.items, results2) %} 
 						<div class="row">
-							<div class="cell" data-title="Number">{{loop.index}}</div>
-							<div class="cell" data-title="Post">{{post['title']}}</div>
-							<div class="cell" data-title="Link"><a href="{{post['link']}}" target='_blank'>Link</a></div>
-							<div class="cell" data-title="Category">{{post['category']}}</div>
+							<div class="cell" style="width: 10%" data-title="Number">
+								1
+							</div>
+							<div class="cell" data-title="Post" style="width:69%;"><a href="#" data-toggle="modal" data-target="#{{t.id}}">{{t.title}}</div>
+							<div class="cell" data-title="Link"><a href="{{t.link}}" target='_blank'>Link</a></div>
+							<div class="cell" data-title="Category">{{t.category}}</div>
 							<div class="cell" data-title="Change?">
 								<form action="{{url_for('updateTable')}}" method="POST">
 									<select name="{{loop.index}}cat">
@@ -36,15 +37,42 @@
 									</select>
 							</div>
 						</div>
-
 						{% endfor %}
 					<button class="btn btn-primary" type="submit" name="name" value="View Tables">Update</button>
+					</div>
+
+				{% for t in t3.items %}
+			<div class="modal fade" id="{{t.id}}" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+  							<div class="modal-dialog" id="modal{{t.id}}" role="document" style="margin: auto; width: fit-content; max-width: 55%">
+    							<div class="modal-content" style="width: fit-content">
+    								<div class="modal-header">
+    									<h2 class="modal-title" id="exampleModalLabel" style="text-align: center; color: #b04c41">{{t.title}}</h2>
+    									<button type="button" class="close" data-dismiss="modal" aria-label="Close">
+    										<span aria-hidden="true">&times;</span>
+    									</button>
+    								</div>
+    							<div class="modal-body">
+    								<img src="{{t.image}}" style="max-height: 450px; max-width: 900px; align-content: center; display: block; margin-left: auto; margin-right: auto;">
+    								{% if t.thread_text != "" %}
+    								<pre style="white-space: pre-wrap">{{t.thread_text}}</pre>
+    								{% endif %}
+    								{% if (t.thread_text == "") and (t.image == "") %}
+    								<svg class="_33UT9FofKPRVp4gDnLAM-6" style="height: 12em; display: block; margin-left:auto; margin-right: auto" viewBox="0 0 24 21" xmlns="http://www.w3.org/2000/svg"><path fill="#000" d="M5.1 3.2c.5.3 1.1.3 1.7.1 1.4-.5 2.9-.9 4.5-.7 1.2.2 1.8.2 2.3.4 1 .4 2 .9 3 1.4.5.3 1 .8 1.5 1.2.2.2.5.4.7.4 2.4-.1 4.1 1 5 3.3.8 2-.5 4.5-2 5.1-.3.1-.6.4-.7.7-.6 2-1.9 3.3-3.7 4.2-.1.1-.2.1-.3.1-.7.3-3.9 1.7-7.9 1-4.8-.9-9.3-4.6-8.7-10.2.1-1 0-1.9-.3-2.9-.2-.2-.2-.5-.2-.8.1-2.7 2.9-4.6 5.1-3.3z"></path><path fill="#FFF" d="M.7 7.5c.4 1.3.7.5.8.5-.1.6-.3 1.3-.3 1.9-.3 2.4.3 4.6 1.9 6.3 3.7 4 8.5 4.6 13.2 2.7 1.2-.5 2.6-1.7 3.3-2.8.8-1.4 1.3-2.8 1.2-4.4 0-.1 0-.2.1-.4.1.4.3.8.3 1.1.1.4 0 .8 0 1.3 1.4-.5 2.2-2.3 1.8-3.9-.5-2-2.1-3.3-3.9-3 .9.8 1.6 3.3 1.4 3.6-1.5-3.8-4.4-6.1-8.2-6.8-3.8-.8-7.2.4-10.1 3.2.6-1.2 1.7-2 2.9-2.9-.6-.1-1-.3-1.4-.3-1.8.1-3.5 2.1-3 3.9z"></path><path fill="#000" d="M7.2 16.7c1.4.6 2.9.9 4.4 1 .6 0 1.3-.4.3-.5-1.2-.1-2.4-.3-3.5-.8-.3-.1-.7-.1-1 0-.1 0-.5.2-.2.3zM7.3 13.4c-.1 0-.2-.1-.3-.2-.1-.2-.2-.4-.4-.6-.6-.6-1.4-1.1-2.2-.9-.3.1-.5.2-.8.2h-.5c0-.1-.1-.3 0-.4.2-.2.5-.3.6-.4 1.6-.6 3.7.6 3.9 1.7v.3c0 .3-.2.3-.3.3zm9.8 1.1c-.1 0-.3 0-.4-.1-.1 0-.1-.1-.2-.1-.7-.5-1.5-.5-2.3 0-.2.1-.5.2-.7.3 0-.2 0-.4.1-.6.6-.6 1.7-.8 2.7-.5.3.1.7.5.9.8.1 0 0 .2-.1.2z"></path><path fill="#000" d="M16.1 20.7c-2-.2-2.7-.9-2.9-2.5-.1-.9-.3-1.6-.7-2.4-.4-.9-.5-1.4-1.5-1.7-1.3-.5-1.9-1.6-2-2.6 0-.8.2-1.7.8-2.3 1.1-1.1 2.9-1.1 4.2-.5 1.3.6 3.8 3.2 4.3 4.5 1.6 4.2.8 7.2-2.2 7.5zM12 5.6c.1.2.1.7.6.5.4-.1.4-.6-.2-1.6-.3-.6-.5-1.6 0-2.2 1-1.3 2.3-1 3.5-.7.4.1 1.5.3 1.5.8 0 .7.6 1.8 1.2 2.2 1.2 1 3.5-.1 3.5-1.8 0-1.5-1.1-2.7-2.5-2.6-.6 0-1.6.7-2 1.2-.6-.2-1.2-.4-1.9-.5-1.3-.3-2.6-.3-3.7.7-1.2 1.1-.8 2.9 0 4-.1-.1-.2-.2-.3-.4.1.1.2.3.3.4.1.1-.6-.9 0 0z"></path><path fill="#FFF" d="M21.3 3.1c-.2.5-.6.9-1 1-.4.1-.9 0-1.3-.3s-.7-.7-.7-1.1c0-.2 0-.8.8-1.4.5-.4 1.4 0 1.9.4.2.4.5.8.3 1.4zM18 14.6c-.5-2.5-3.8-6.4-6.8-5.3-1.4.5-1.7 2.4-.8 3.5.7.8 2.1 1.2 3 1.6-.3 0-.6.1-.9 0 1.2 1.6.6 4.7 2.8 5.2 2.5.7 3.4-1.7 2.7-5z"></path></svg>
+    								<h2 style="text-align: center;">Nothing provided...</h2>
+    								{% endif %}
+								</div>
+      							<div class="modal-footer">
+        							<button type="button" class="btn btn-primary" data-dismiss="modal">Close</button>
+    							</div>
+								</div>
+							</div>
 						</div>
-</div>
+						{% endfor %}
 <br/>
 </form>	
 </br>
 </br>
+
 
 </body>
 
